--- a/cartelera.html
+++ b/cartelera.html
@@ -58,7 +58,7 @@
 <div class="carteleraSem">
      <div class="row ">
         <div class="col l2">
-            <img src="img/jurasik.webp" href="jurassic.html">
+            <img src="img/jurasik.webp" >
 
         </div>
         <div class="col l7">
@@ -66,6 +66,8 @@
            <p> Este verano, vive la épica conclusión de la era Jurásica donde dos generaciones se unen por primera vez. Chris Pratt y Bryce Dallas Howard se suman a la ganadora del Oscar® Laura Dern, Jeff Goldblum y Sam Neill en Jurassic World Dominio, una nueva e impresionante aventura épica que se extiende por todo el mundo. Del arquitecto y director de Mundo Jurásico, Colin Trevorrow. Dominio tiene lugar cuatro años después de la destrucción de Isla Nublar. Los dinosaurios ahora viven y cazan junto a los humanos en todo el mundo. Este frágil equilibrio cambiará el futuro y determinará, de una vez por todas, si los seres humanos deben seguir siendo los depredadores máximos en un planeta que ahora comparten con las criaturas más temibles de la historia.</p>
            <p>Género: Aventura</p> 
             <p>Calificación: Apta para mayores de 13 años</p>
+            <a href="jurassic.html">Ver más..-</a>
+            <a class="waves-effect waves-light btn-small" href="comprarentradas.html ">Comprar entradas</a>
         </div>
      </div>
      <div class="row">
@@ -79,6 +81,8 @@
             <p>Una aventura llena de diversión que cuenta la historia del origen de Buzz Lightyear (voz en inglés de Chris Evans), el héroe que inspiró el juguete. LIGHTYEAR presenta al legendario Guardián Espacial en una aventura intergaláctica luego de un incidente en el que queda abandonado en un planeta hostil a 4.2 millones de años luz de la Tierra junto a su comandante y tripulación. Buzz, intenta encontrar el camino de regreso a casa a través del espacio y el tiempo. A él se une un grupo de ambiciosos reclutas y su encantador gato robot, Sox. La misión se ve amenazada con la llegada de Zurg y su ejército de robots despiadados.</p>
             <p>Género: Animación</p> 
             <p>Calificación: Apta para todo público</p>
+            <a href="buzz.html">Ver más..-</a>
+            <a class="waves-effect waves-light btn-small" href="comprarentradas.html ">Comprar entradas</a>
          </div>
      </div>
 
@@ -92,6 +96,8 @@
             <p> Después de más de treinta años de servicio como uno de los mejores aviadores de la Armada, Pete "Maverick" Mitchell (Tom Cruise) está donde pertenece, como un valiente piloto de prueba y esquivando el avance en el rango que lo pondría en tierra. Cuando se halla entrenando a un destacamento de graduados de Top Gun para una misión especializada que ningún piloto vivo ha visto nunca, Maverick se encuentra con el teniente Bradley Bradshaw (Miles Teller), llamada: "Gallo", el hijo del difunto amigo de Maverick y el oficial de intercepción de radar, el teniente Nick Bradshaw, también conocido como "Goose". Enfrentando un futuro incierto y confrontando a los fantasmas de su pasado, Maverick se ve envuelto en una confrontación con sus propios miedos más profundos, culminando en una misión que exige el máximo sacrificio de aquellos que serán elegidos para volar.</p>
             <p>Género: Acción</p> 
             <p>Calificación: Apta para todo público</p>
+            <a href="topgun.html">Ver más..-</a>
+            <a class="waves-effect waves-light btn-small" href="comprarentradas.html ">Comprar entradas</a>
 
         </div>
     </div>
