--- a/proxestrenos.html
+++ b/proxestrenos.html
@@ -66,6 +66,7 @@
            <p> El teléfono está muerto. Y está sonando. El director Scott Derrickson regresa a sus raíces del terror y se asocia nuevamente con la marca más importante del género, Blumhouse, con una nueva entrega de thriller de terror. Finney Shaw, un tímido, pero inteligente niño de 13 años es secuestrado por un sádico asesino y atrapado en un aterrador, oscuro y aislado sótano, donde los gritos son de poca utilidad. Cuando un teléfono negro desconectado en la pared comienza a sonar, Finney descubre que puede escuchar a los espíritus de las víctimas anteriores del asesino. Los espirítus en el teléfono están decididos a asegurarse de que lo que les pasó a ellos no le pase a Finney..</p>
            <p>Género: Terror</p> 
             <p>Calificación: Apta para mayoresde 18 años</p>
+            <a href="blackphone.html">Ver más..-</a>
         </div>
      </div>
      <div class="row">
@@ -80,6 +81,7 @@
             </p>
             <p>Género: Aventuras</p> 
             <p>Calificación: Apta para todo público</p>
+            <a href="minions.html">Ver más..-</a>
          </div>
      </div>
 
@@ -93,6 +95,7 @@
             <p> Mucho tiempo después de los eventos sucedidos en Avengers: Endgame, los Guardianes de la Galaxia deben convencer a Thor para que regrese al campo de batalla y se enfrente a un villano empeñado en matar a todas las criaturas divinas en todo el cosmos. Para luchar contra esta amenaza, Thor debe reclutar a sus amigos Valkyrie, Korg y su ex novia Jane Foster, quien misteriosamente puede empuñar el martillo de Thor y por ende poseer su gran poder.</p>
             <p>Género: Acción</p> 
             <p>Calificación: Apta para todo público</p>
+            <a href="thor.html">Ver más..-</a>
 
         </div>
     </div>
